fix tooltip position on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,6 @@ body {
 #sidebar {
   width: 50%;
   min-width: 300px;
-  position: relative;
   padding: 2em;
   background-color: #43A047;
   font-size: 15px;
